# freva-deployment

./: .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  Dockerfile.base  Dockerfile.pyinstaller  Dockerfile.windows  LICENSE  MANIFEST.in  Makefile  README.md  contributing.html  deploy  deploy-freva-all.spec  faq.html  genindex.html  index.html  install_ansible  mypy.ini  objects.inv  pyproject.toml  release.py  requirements.txt  requirements_nix.txt  requirements_winows.txt  search.html  searchindex.js  setup.py  sitemap.xml  systemd.service  whatsnew.html
.github/dependabot/: constraints.txt
.github/workflows/: build_containers.yml  build_job-2.yml  build_job.yml  build_template_image.yml  build_vault.yml  bump_version.yml  ci_job.yml  dependabot-merge.yml  docker_job.yml  lint_job.yml  pypi_job.yml
_sources/: contributing.md.txt  whatsnew.rst.txt
_sources/after-deployment/: LegalNotes.md.txt  TransitionPlugins.md.txt  TransitionService.md.txt
_sources/architecture/: Architecture.md.txt
_sources/deployment/: Config.md.txt  Configure.md.txt  index.rst.txt  webui.rst.txt
_static/: documentation_options.js
after-deployment/: AfterDeployment.html  LegalNotes.html  TransitionPlugins.html  TransitionService.html  index.html
architecture/: Architecture.html  Folders.html  index.html
assets/backup_service/: backup_rotate  rotate_passwd  startup
assets/config/: create_tables.sql  evaluation_system.conf  evaluation_system.conf.tmpl  inventory  inventory.toml  inventory_2
assets/db_service/: Dockerfile  daily_backup.sh  password_rotate.py  reset_root_pw.sh
assets/playbooks/: backup-server-playbook.yml  core-server-playbook.yml  databrowser-server-compose-template.yml  databrowser-server-playbook.yml  db-server-compose-template.yml  db-server-playbook.yml  server-map-playbook.yml  solr-server-playbook.yml  vault-server-compose-template.yml  vault-server-playbook.yml  web-server-compose-template.yml  web-server-playbook.yml
assets/scripts/: create_cron.sh  create_systemd.py  create_systemd.sh  docker-or-podman  kill_container
assets/servers/: Dockerfile  restservice.py
assets/share/freva/deployment/config/: conda-environment.yml  inventory.toml  unprivileged-user.toml
assets/share/freva/deployment/db_service/: db-server-compose.j2  db-temp-server-compose.j2  mariadb_to_mysql_migration.yml  password_rotate.py  reset_root_pw.sh  systemd-conda.j2
assets/share/freva/deployment/freva-rest/: data-loader-systemd.j2  freva_rest-compose.j2  redis.j2  systemd-conda.j2  systemd.j2
assets/share/freva/deployment/playbooks/: core-server-playbook.yml  data-loader-playbook.yml  data-loader-template.service  databrowser-server-compose-template.yml  databrowser-server-playbook.yml  db-server-compose-template.yml  db-server-playbook-conda.yml  db-server-playbook-container.yml  db-server-playbook.yml  freva-rest-vars.yml  freva_rest-server-compose-template.yml  freva_rest-server-playbook-conda.yml  freva_rest-server-playbook-container.yml  freva_rest-server-playbook.yml  main-deployment.yml  redis-cache-compose-template.yml  server-map-playbook.yml  solr-server-playbook.yml  vars.yml  vault-server-compose-template.yml  vault-server-playbook.yml  versions.yaml  versions_new.yaml  web-server-compose-template.yml  web-server-playbook-conda.yml  web-server-playbook-container.yml  web-server-playbook.yml  web-vars.yml
assets/share/freva/deployment/scripts/: create-conda.sh  create_cron.sh  create_systemd.py  docker-or-podman  download.py  download_conda.py  dump_sql  healthcheck.sh  inspect.sh  migrate-volumes.sh  mongo-flush-pass-entrypoint.sh  prepare-httpd  rootless-entrypoint.sh
assets/share/freva/deployment/servers/: restservice.py
assets/share/freva/deployment/vault/: Dockerfile  add-vault-secret  checks.py  deploy_vault.py  mypy.ini  mysqld.service  policy-file.hcl  runserver.py  systemd.j2  vault-server-tls.hcl
assets/solr_service/: Dockerfile  create_core.sh  daily_backup.sh  managed-schema
assets/unix_mock/: pyproject.toml
assets/unix_mock/src/fcntl/: __init__.py
assets/unix_mock/src/grp/: __init__.py
assets/unix_mock/src/pwd/: __init__.py
assets/unix_mock/src/termios/: __init__.py
assets/unix_mock/src/tty/: __init__.py
assets/vault/: Dockerfile  deploy_vault.py  policy-file.hcl  runserver.py  vault-server-no-tls.hcl
assets/web/: Dockerfile  add-aur.sh  create_web_conf.py  freva_web.conf  setup_web.sh
automation/: automation-setup.py
backup_service/: Dockerfile
cloud-init/: start-vm.sh
config/: evaluation_system.conf.tmpl  inventory.tmpl
deployment/: Config.html  Configure.html  Installation.html  TuiHowto.html  index.html  webui.html
docs/: AfterDeployment.md  Architecture.md  Configure.md  Folders.md  Installation.md  LegalNotes.md  Services.md  Transition.md  TuiHowto.md  conf.py  contributing.md  deployment_module.rst  environment.yml  faq.md  index.rst  modules.rst  whatsnew.rst
docs/after-deployment/: AfterDeployment.md  TransitionService.md  index.rst
docs/architecture/: Architecture.md  Folders.md  index.rst
docs/deployment/: Config.md  Configure.md  Installation.md  TuiHowto.md  index.rst  webui.rst
playbooks/: backend-server-playbook.yml  backup-server-playbook.yml  db-server-playbook.yml  solr-server-playbook.yml  vault-server-playbook.yml  web-server-playbook.yml
pyinstaller/: download_cowsay.py  pre-win.py  pyinstaller-deploy-freva-cmd.py  pyinstaller-deploy-freva.py  pyinstaller-script.py
solr_service/: Dockerfile
src/freva_deployment/: __init__.py  __main__.py  deploy.py  error.py  keys.py  logger.py  runner.py  utils.py  versions.json  versions.py
src/freva_deployment/callback_plugins/: deployment_plugin.py
src/freva_deployment/cli/: __init__.py  _config.py  _deploy.py  _migrate.py  _server_map.py  _service.py
src/freva_deployment/ui/deployment_qt/: mainwindow.py
src/freva_deployment/ui/deployment_tui/: __init__.py  base.py  deploy_forms.py  main_window.py
vault/: deploy_vault.py  vault-server-tls.hcl
web/: Dockerfile  docker_cmd.sh  freva_web.conf
(+101 files in other folders)
