[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "freva-deployment"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
dynamic = ["version"]
description = "Deployment of the Free Evaluation Framework Freva"
requires-python = ">=3.8"
dependencies = [ "appdirs",
             "ansible",
             "ansible-runner",
             "npyscreen",
             "PyMySQL",
             "PyYAML",
             "rich",
             "rich-argparse",
             "toml",
             "tomlkit",
             "requests",
]
[project.optional-dependencies]
dev = ["flit", "tox"]
[project.urls]
Documentation = "https://freva-deployment.readthedocs.io/en/latest/"
Issues = "https://github.com/FREVA-CLINT/freva-deployment/issues"
Source = "https://github.com/FREVA-CLINT/freva-deployment"
Home = "https://freva-deployment.readthedocs.io/en/latest"

[project.scripts]
deploy-freva-cmd = "freva_deployment.cli:deploy"
freva-migrate = "freva_deployment.cli:migrate"
deploy-freva = "freva_deployment.ui.deployment_tui:tui"


[tool.flit.sdist]
include = ["assets/*"]

[tool.flit.external-data]
directory = "assets"

[package-data]
freva_deployment = ["py.typed", "versions.json"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = types, lint, test
[testenv]
parallel_show_output = false
[testenv:test]
deps = -e .

commands =
    deploy-freva-cmd --help
    deploy-freva --help

[testenv:docs]
deps = .
       pydata-sphinx-theme
       sphinx
       sphinx-copybutton
       recommonmark
       sphinx_sitemap
       sphinx_favicon
       sphinx_togglebutton
       myst-parser
       sphinx-design
       linkify
allowlist_externals = make
commands = make -C docs clean
           make -C docs html
[testenv:lint]
deps = .
       black
       isort
commands =
    isort --check --profile black -t py311 -l 79 src
[testenv:types]
deps = .
       mypy
       types-toml
       pytest-stub
       types-PyMySQL
commands = mypy --install-types --non-interactive
[testenv:release]
deps = git-python
       packaging
       tomli
       requests
commands = python3 release.py tag freva_deployment -b versions
"""
