[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "freva-deployment"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
dynamic = ["version"]
description = "Deployment of the Free Evaluation Framework Freva"
requires-python = ">=3.8"
dependencies = [ "appdirs",
             "ansible",
             "ansible-core",
             "cowsay",
             "npyscreen",
             "PyMySQL",
             "PyYAML",
             "rich",
             "rich-argparse",
             "toml",
             "tomlkit",
             "requests",
]
[project.optional-dependencies]
dev = ["flit", "tox"]
win = ["cryptography", "windows-curses", "pyinstaller", "mock", "mysqlclient"]
unix = ["cryptography", "pyinstaller", "mock", "mysqlclient"]
doc = ["pydata-sphinx-theme",
       "sphinx",
       "sphinx-copybutton",
       "recommonmark",
       "linkify",
       "linkify-it-py",
       "sphinx_sitemap",
       "sphinx_favicon",
       "sphinx_togglebutton",
       "myst-parser",
       "sphinx-design",
       "sphinx-execute-code-python3",
]

[project.urls]
Documentation = "https://freva-deployment.readthedocs.io/en/latest/"
Issues = "https://github.com/FREVA-CLINT/freva-deployment/issues"
Source = "https://github.com/FREVA-CLINT/freva-deployment"
Home = "https://freva-deployment.readthedocs.io/en/latest"

[project.scripts]
deploy-freva-cmd = "freva_deployment.cli:deploy"
freva-migrate = "freva_deployment.cli:migrate"
deploy-freva = "freva_deployment.cli:main_cli"


[tool.flit.sdist]
include = ["assets/*"]

[tool.flit.external-data]
directory = "assets"

[package-data]
freva_deployment = ["py.typed", "versions.json"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = types, lint, test
[testenv]
parallel_show_output = false
[testenv:test]
deps = -e .

commands =
    deploy-freva-cmd --help
    deploy-freva --help

[testenv:docs]
deps = .[doc]
allowlist_externals = make
commands = make -C docs clean
           make -C docs html
[testenv:lint]
deps = .
       black
       isort
commands =
    isort --check --profile black -t py311 -l 79 src
[testenv:types]
deps = .
       mypy
       types-toml
       pytest-stub
       types-PyMySQL
commands = mypy --install-types --non-interactive
[testenv:release]
deps = git-python
       packaging
       tomli
       requests
commands = python3 release.py tag freva_deployment
[testenv:build]
deps = -e .
       pyinstaller
       cryptography
allowlist_externals = go
passenv =
    COW_EXE
setenv =
    GOBIN = {toxinidir}/pyinstaller/
    COW_EXE = {env:COW_EXE:cowsay}
commands_pre = go install github.com/Code-Hex/Neo-cowsay/cmd/v2/cowsay@latest
commands =
          pyinstaller pyinstaller/pyinstaller-deploy-freva.py -c \
          --name deploy-freva --onedir --clean -i docs/_static/freva_owl.ico \
          --add-data 'assets/share/freva/deployment:freva_deployment/assets' \
          --add-data 'src/freva_deployment/versions.json:freva_deployment' \
          --add-data 'src/freva_deployment/callback_plugins:freva_deployment/callback_plugins' \
          --add-binary 'pyinstaller/{env:COW_EXE:cowsay}:bin' \
          --hidden-import curses \
          --hidden-import windows-curses \
          --hidden-import cryptography \
          --hidden-import ansible_pylibssh \
          --collect-all ansible \
          --collect-all ansible_collections \
          --hidden-import pkg_resources.extern \
          --exclude-module pycrypto \
          --exclude-module PyInstaller \
          --exclude-module cowsay
"""
