[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "unix-mock"
description = "Simulations of unix libraries for windows"
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
license = {text = "BSD License"}
classifiers = [
               "Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License",
               "Operating System :: POSIX :: Linux",
               "Programming Language :: Python :: 3",
]
version = "0.0.1"
requires-python = ">=3.7"
dependencies = ["win32api"]
